--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.8.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
